force-app/main/default/objects/Music_Product__c/Music_Product__c.object-meta.xml
<CustomObject>
    <label>Music Product</label>
    <nameField>
        <label>Music Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>