force-app/main/default/objects/Music_Product__c/fields/Account_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Opened_Date__c</fullName>
    <label>Account Opened Date</label>
    <type>Date</type>
</CustomField>