force-app/main/default/objects/Music_Product__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>