force-app/main/default/objects/Music_Product__c/fields/Instrument_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Sub_Type__c</fullName>
    <label>Instrument Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brass</fullName>
            </value>
            <value>
                <fullName>Percussion</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Woodwind</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>