force-app/main/default/objects/Music_Product__c/fields/Music_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Music_Product_Description__c</fullName>
    <description>Summary and notes about the music product.</description>
    <label>Music Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>