force-app/main/default/objects/Music_Product__c/fields/Needs_Stocking__c.field-meta.xml
<CustomField>
    <fullName>Needs_Stocking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The item needs to be stocked.</description>
    <label>Needs Stocking</label>
    <type>Checkbox</type>
</CustomField>