force-app/main/default/objects/Music_Product__c/fields/Popularity__c.field-meta.xml
<CustomField>
    <fullName>Popularity__c</fullName>
    <label>Popularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tremendous</fullName>
            </value>
            <value>
                <fullName>Very</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Non-existent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>