force-app/main/default/objects/Music_Product__c/fields/Revature_Music_Store__c.field-meta.xml
<CustomField>
    <fullName>Revature_Music_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revature Music Store</label>
    <referenceTo>Revature_Music_Store__c</referenceTo>
    <relationshipLabel>Music Products</relationshipLabel>
    <relationshipName>Music_Products</relationshipName>
    <type>Lookup</type>
</CustomField>