force-app/main/default/objects/Music_Product__c/validationRules/Instrument_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Instrument_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT(ISPICKVAL( Product_Type__c , &quot;Instrument&quot;)) ,  NOT( ISPICKVAL( Instrument_Sub_Type__c , &quot;&quot;) ))</errorConditionFormula>
    <errorMessage>Error: Only Instruments can have a sub-type.</errorMessage>
</ValidationRule>